--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
   </head>
   <body class="mg-0 bg-bggray">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="backdrop-hook"></div>
+    <div id="drawer-hook"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
