--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- google map -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=API_KEY"
+      async defer
+    ></script>
   </body>
 </html>
