ui update with login status

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     <!-- google map -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcFo4wycR00kcIybOtrRE-oBXoSzz_dQk"
+      src="https://maps.googleapis.com/maps/api/js?key=API_KEY"
       async defer
     ></script>
   </body>
