--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     <!-- google map -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=API_KEY"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJVfaQkwszmaYx1uArSmFIEuw13F47WtQ"
       async defer
     ></script>
   </body>
